--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGODB_URI = mongodb+srv://kajetanfratczak1:kYrMT2S7zLhBt4RF@cluster0.3gpbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0mongodb+srv://kajetanfratczak1:kYrMT2S7zLhBt4RF@cluster0.3gpbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=8080
+MONGODB_URI=mongodb://localhost:27017/sklep_internetowy
 JWT_SECRET=123123123
+PORT=8080
