--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+# Definicja zmiennych środowiskowych, które są używane przez aplikację do konfiguracji połączeń i ustawień.
 MONGODB_URI=mongodb://localhost:27017/sklep_internetowy
 JWT_SECRET=123123123
 PORT=8080
